--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
   <head>
     <title>Redirecting</title>
-    <meta http-equiv="Refresh" content="0; url='/stuff/'" />
   </head>
+  <body>
+    <script>
+        window.location.assign('http://pizzafan6992.github.io/stuff/')
+    </script>
+  </body>
 </html>
